syntax="proto3";
option go_package="./greeter";
message HelloReq{
    string name =1;
}
message HelloRes{
    string message=1;
}
service Greeter{
    rpc SayHello(HelloReq)returns (HelloRes);
}